Renamed unsubscribe text.

--- a/app/Resources/views/mail/partials/lang/bg/unsubscribe.html.twig
+++ b/app/Resources/views/mail/partials/lang/bg/unsubscribe.html.twig
@@ -1,3 +1,3 @@
 <div>
-    <p>За да се отпишете, кликнете <a href="{{ url('homepage') }}unsubscribe?email={{ receiver.email }}">тук</a>. </p>
+    <p>Kликнете <a href="{{ url('homepage') }}unsubscribe?email={{ receiver.email }}">тук</a>, за да се отпишете. </p>
 </div>
