--- a/app/Resources/views/mail/partials/lang/en/unsubscribe.html.twig
+++ b/app/Resources/views/mail/partials/lang/en/unsubscribe.html.twig
@@ -1,3 +1,3 @@
 <div>
-    <p>To un unsubscribe, click <a href="{{ url('homepage') }}unsubscribe?email={{ receiver.email }}">here</a>. </p>
+    <p>Click <a href="{{ url('homepage') }}unsubscribe?email={{ receiver.email }}">here</a> to unsubscribe. </p>
 </div>
