Changed text, fixed typo, changed titles per page. Added box shadow and border to the sliders' next article box.

--- a/app/Resources/views/default/categories.html.twig
+++ b/app/Resources/views/default/categories.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% block title %}{{ localLang.websiteName }} - {{ viewModel.selectedCategory.categoryName }}{% endblock %}
 
 {% block body %}
     {% embed 'partials/banner.html.twig' %} {% endembed %}
