--- a/app/Resources/views/partials/home-slider.html.twig
+++ b/app/Resources/views/partials/home-slider.html.twig
@@ -50,8 +50,8 @@
                     </div>
 
                     <div class="home_slider_next_container">
-                        <div class="home_slider_next"
-                             style="background-image:url('{{ sliderItem.nextArticle.backgroundImageLink }}'); -webkit-background-size: cover;background-size: cover;">
+                        <div class="home_slider_next rounded-top border border-bottom-0  border-dark shadow"
+                             style="background-image:url('{{ sliderItem.nextArticle.backgroundImageLink }}'); -webkit-background-size: cover;background-size: cover; box-shadow: -10px -14px 50px -1px rgba(0,0,0,0.92);">
                             <div class="home_slider_next_background trans_400"></div>
                             <div class="home_slider_next_content trans_400">
                                 <div class="home_slider_next_title">{{ localLang.nextArticle }}</div>
