--- a/app/Resources/views/security/forgotten-password.html.twig
+++ b/app/Resources/views/security/forgotten-password.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
-{% block title %}Forgotten Password{% endblock %}
+{# @var localLang \AppBundle\Service\LocalLanguage #}
+{% block title %}{{ localLang.websiteName }} - {{ localLang.forgottenPassword }}  {% endblock %}
+
 {% block body %}
     {% embed 'partials/banner.html.twig' %} {% endembed %}
 
@@ -22,6 +24,7 @@
 {% block javascripts %}
     <script src="{{ asset('styles/js/custom.js') }}"></script>
 {% endblock %}
+
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ asset('styles/styles/category.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ asset('styles/styles/contact_responsive.css') }}">
