--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
-
+{# @var localLang \AppBundle\Contracts\ILanguagePack #}
+{% block title %}{{ localLang.websiteName }} - {{ localLang.login }}  {% endblock %}
 {% block body %}
     {% embed 'partials/banner.html.twig' %} {% endembed %}
 
