Edited login and register pages. Fixed contects page form displayed on top of navbar. Fixed deprecation in smfony security.

--- a/app/Resources/views/partials/lang/bg/login.html.twig
+++ b/app/Resources/views/partials/lang/bg/login.html.twig
@@ -15,7 +15,7 @@
         </div>
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
         <div class="form-group">
-            <button tabindex="3" class="btn btn-primary" type="submit">Напред</button>
+            <button tabindex="3" class="btn btn-outline-primary" type="submit">Напред</button>
         </div>
         <p class="text-dark">Забравена парола? натиснете<a href="{{ path('forgotten_password') }}"> тук</a>.</p>
     </div>
