--- a/app/Resources/views/partials/lang/en/login.html.twig
+++ b/app/Resources/views/partials/lang/en/login.html.twig
@@ -15,7 +15,7 @@
         </div>
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
         <div class="form-group">
-            <button tabindex="3" class="btn btn-primary" type="submit">Login</button>
+            <button tabindex="3" class="btn btn-outline-primary" type="submit">Login</button>
         </div>
     </div>
     <p class="text-dark">Forgotten password? click<a href="{{ path('forgotten_password') }}"> here.</a></p>
