--- a/app/Resources/views/partials/lang/en/register.html.twig
+++ b/app/Resources/views/partials/lang/en/register.html.twig
@@ -2,15 +2,11 @@
       class="mt-1 mb-1">
 
     <h3 class="text-dark">{{ localLang.register }}</h3>
-    {% if errors %}
-        {% for err in errors %}
-            <h5 class="alert alert-danger">{{ localLang.forName(err.message) }}</h5>
-        {% endfor %}
-    {% endif %}
 
     {% if error %}
         <h5 class="alert alert-danger">{{ error }}</h5>
     {% endif %}
+
     <div class="row">
         <div class="text-dark col-md-6">
 
@@ -18,22 +14,26 @@
                 <label for="username">Username</label>
                 <input id="username" name="user_register[username]" maxlength="35" value="{{ userform.username }}"
                        type="text" required placeholder="Username" class="form-control">
+                {% embed 'partials/errors/field-error-handler.html.twig' with {'field':form.username} %} {% endembed  %}
             </div>
             <div class="form-group">
                 <label for="email">Email </label>
                 <input id="email" name="user_register[email]" maxlength="35" value="{{ userform.email }}" type="email"
                        required placeholder="Email" class="form-control">
+                {% embed 'partials/errors/field-error-handler.html.twig' with {'field':form.email} %} {% endembed  %}
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
                 <input id="password" minlength="{{ twigInformer.passwordMinLength }}" name="user_register[password]"
                        type="password" maxlength="20" required
                        placeholder="At least {{ twigInformer.passwordMinLength }} characters" class="form-control">
+                {% embed 'partials/errors/field-error-handler.html.twig' with {'field':form.password} %} {% endembed  %}
             </div>
             <div class="form-group">
                 <label for="passwordConf">Confirm Password</label>
                 <input id="passwordConf" name="user_register[confPassword]" type="password" required
                        placeholder="Conf password" class="form-control">
+                {% embed 'partials/errors/field-error-handler.html.twig' with {'field':form.confPassword} %} {% endembed  %}
             </div>
 
             {{ form_row(form._token) }}
@@ -45,14 +45,18 @@
             <p class="text-dark">Signing up for our blog enables various features that you can use to enrich your reading experience.</p>
             <p class="text-dark">Those include:</p>
             <ul>
-                <li> - Customizable personal page.</li>
-                <br>
-                <li> - Answering the comments of other people.</li>
-                <br>
-                <li> - Access to the Online Library where you can saves posts to read later.
+                <li>
+                    - Customizable personal page.
                 </li>
-                <br>
-                <li> - Notifications about new posts, updates and messages. (the bell icon)</li>
+                <li>
+                    - Answering the comments of other people.
+                </li>
+                <li>
+                    - Access to the Online Library where you can saves posts to read later.
+                </li>
+                <li>
+                    - Notifications about new posts, updates and messages. (the bell icon)
+                </li>
             </ul>
         </div>
     </div>
