Added logs page on admin panel.

--- a/app/Resources/views/admin/panel.html.twig
+++ b/app/Resources/views/admin/panel.html.twig
@@ -110,6 +110,19 @@
                             </div>
                         </div>
                         <hr>
+                        <div class="sidebar_section">
+                            <div class="sidebar_title_container">
+                                <div class="sidebar_title">Logs</div>
+                            </div>
+                            <div class="sidebar_section_content pt-0">
+                                <ul class="list-group">
+                                    <li class="list-group-item">
+                                        <a href="{{ path('show_logs') }}">Show Logs</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <hr>
                     {% endblock %}
                 {% endembed %}
             </div>
