--- a/app/Resources/views/queries/load-more-logs.html.twig
+++ b/app/Resources/views/queries/load-more-logs.html.twig
@@ -1,20 +1,5 @@
 {% for log in page.elements %}
-    <tr>
-        <td>
-            <p class="text-dark">{{ log.id }}</p>
-        </td>
-        <td class="text-left">
-            <p>
-                <small>{{ log.date|date }}</small>
-            </p>
-        </td>
-        <td>
-            <small class="text-dark">{{ log.location }}</small>
-        </td>
-        <td>
-            <small class="text-dark">{{ log.message }}</small>
-        </td>
-    </tr>
+    {% embed 'admin/logs/logs-single-row.html.twig' with {'log':log} %} {% endembed %}
 {% endfor %}
 
 {% if page.pages > page.pageable.page %}
