--- a/app/Resources/views/partials/articles/article-author-info-panel.html.twig
+++ b/app/Resources/views/partials/articles/article-author-info-panel.html.twig
@@ -1,9 +1,10 @@
 <div class="post_panel post_panel_top d-flex flex-row align-items-center justify-content-start">
+    {# @var twigUtil \AppBundle\Util\TwigUtil #}
     <div class="author_image">
         <div><img src="{{ article.author.profileImage }}" alt=""></div>
     </div>
     <div class="post_meta">
-        <a href="{{ path('user_details', {'username': article.author.username}) }}">{{ article.author.username }}</a>
+        <a href="{{ path('user_details', {'username': article.author.username}) }}">{{ twigUtil.resolveUsername(article.author) }}</a>
         <span>{{ article.dateAdded.format(twigInformer.simpleDateFormat) }}</span>
         {% if app.user %}
             {% if article.author.id == app.user.id %}
