--- a/app/Resources/views/partials/articles/large-card-with-background.html.twig
+++ b/app/Resources/views/partials/articles/large-card-with-background.html.twig
@@ -1,4 +1,5 @@
 <!-- Large Card With Background -->
+{# @var twigUtil \AppBundle\Util\TwigUtil #}
 <div class="card card_large_with_background grid-item">
     <a href="{{ path('show_article', {'id': article.id}) }}">
         <div class="card_background"
@@ -8,7 +9,7 @@
         <div class="card-title"><a href="{{ path('show_article', {'id': article.id}) }}">{{ article.title }}</a></div>
 
         <small class="post_meta">
-            <a href="{{ path('user_details', {'username':article.author.username}) }}">{{ article.author.username }}</a><span>{{ article.dateAdded.format(twigInformer.simpleDateFormat) }}</span>
+            <a href="{{ path('user_details', {'username':article.author.username}) }}">{{ twigUtil.resolveUsername(article.author) }}</a><span>{{ article.dateAdded.format(twigInformer.simpleDateFormat) }}</span>
         </small>
         {% if app.user %}
             <div>
