--- a/app/Resources/views/default/article.html.twig
+++ b/app/Resources/views/default/article.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{# @var twigInformer \AppBundle\Service\TwigInformer #}
 
 {% block ogType %}article{% endblock %}
 {% block ogTitle %}{{ article.title }}{% endblock %}
@@ -48,7 +49,7 @@
                             <div class="row">
                                 <div class="col-md-6 d-md-block">
                                     <div class="fb-like text-right"
-                                         data-href="{{ url(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')) }}"
+                                         data-href="{{ url('show_article', {'id':article.id}) }}"
                                          data-layout="standard"
                                          data-action="like"
                                          data-width="300"
@@ -127,7 +128,7 @@
             if (d.getElementById(id)) return;
             js = d.createElement(s);
             js.id = id;
-            js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.1&appId=431697957339837&autoLogAppEvents=1';
+            js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.1&appId={{ twigInformer.appId }}&autoLogAppEvents=1';
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
