--- a/app/Resources/views/admin/panel.html.twig
+++ b/app/Resources/views/admin/panel.html.twig
@@ -99,6 +99,19 @@
                         <hr>
                         <div class="sidebar_section">
                             <div class="sidebar_title_container">
+                                <div class="sidebar_title">Questions/Feedback</div>
+                            </div>
+                            <div class="sidebar_section_content pt-0">
+                                <ul class="list-group">
+                                    <li class="list-group-item">
+                                        <a href="{{ path('show_all_questions') }}">Observe Questions</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="sidebar_section">
+                            <div class="sidebar_title_container">
                                 <div class="sidebar_title">AAaM Feature</div>
                             </div>
                             <div class="sidebar_section_content pt-0">
