Updated new article notification email html and unsubscribe partials.

--- a/app/Resources/views/mail/partials/lang/bg/unsubscribe.html.twig
+++ b/app/Resources/views/mail/partials/lang/bg/unsubscribe.html.twig
@@ -1,3 +1,7 @@
 <div>
-    <p>Kликнете <a href="{{ url('homepage') }}unsubscribe?email={{ receiver.email }}">тук</a>, за да се отпишете. </p>
+    <p>
+        <small>Kликнете <a href="{{ url('homepage') }}unsubscribe?email={{ receiver.email }}">тук</a>, за да се
+            отпишете.
+        </small>
+    </p>
 </div>
