--- a/app/Resources/views/mail/partials/lang/en/unsubscribe.html.twig
+++ b/app/Resources/views/mail/partials/lang/en/unsubscribe.html.twig
@@ -1,3 +1,6 @@
 <div>
-    <p>Click <a href="{{ url('homepage') }}unsubscribe?email={{ receiver.email }}">here</a> to unsubscribe. </p>
+    <p>
+        <small>Click <a href="{{ url('homepage') }}unsubscribe?email={{ receiver.email }}">here</a> to unsubscribe.
+        </small>
+    </p>
 </div>
