Made visual improvements... Now clicking on one of the links it will be highlighted in white.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -56,11 +56,8 @@
 {% block javascripts %}{% endblock %}
 
 <!-- to be removed -->
-<script>
-    $(function () {
-        var activeNav = '.route{{ app.request.pathinfo }}'.replace(/\//g, "-");
-        $(activeNav).addClass('active');
-    });
+<script> //Constants from backend
+    var CURRENT_URL = '{{ app.request.pathinfo }}';
 </script>
 
 </body>
