--- a/app/Resources/views/partials/scripts.html.twig
+++ b/app/Resources/views/partials/scripts.html.twig
@@ -5,6 +5,7 @@
     <script src="{{ asset('styles/plugins/OwlCarousel2-2.2.1/owl.carousel.js') }}"></script>
     <script src="{{ asset('styles/plugins/easing/easing.js') }}"></script>
     <script src="{{ asset('styles/plugins/masonry/masonry.js') }}"></script>
+    <script src="{{ asset('styles/js/header-routing.js') }}"></script>
     <!-- these scripts are not present in all pages -->
     <script src="{{ asset('styles/plugins/masonry/images_loaded.js') }}"></script>
     <script src="{{ asset('styles/plugins/parallax-js-master/parallax.min.js') }}"></script>
